// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExpenseForm should be rendered correctly - TC 2 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div>
      <p>
         Description: 
      </p>
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Your Expense Descr"
        type="text"
        value="EBB Bill"
      />
    </div>
    <div>
      <p>
         Amount:
      </p>
      <input
        onChange={[Function]}
        placeholder="Your Expense Amount"
        type="text"
        value={100}
      />
    </div>
    <div>
      <p>
         Create Date: 
      </p>
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"2023-06-30T18:30:00.000Z"}
        daySize={39}
        disabled={false}
        displayFormat="DD-MM-YYYY"
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div>
      <p>
         Comments
      </p>
      <textarea
        onChange={[Function]}
        placeholder="Add Comments for your expense here"
        type="text"
        value="Nothing Nothing"
      />
    </div>
    <div>
      <p>
         
      </p>
      <button>
         Add Expense 
      </button>
    </div>
  </div>
</form>
`;

exports[`ExpenseForm should be rendered correctly - TC 3 - Form Submit - No decsr/amount 1`] = `
<form
  onSubmit={[Function]}
>
  <p
    style={
      Object {
        "color": "red",
        "fontWeight": "bold",
      }
    }
  >
      
    Mandatory inputs missing - add both description and amount to continue
     
  </p>
  <div>
    <div>
      <p>
         Description: 
      </p>
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Your Expense Descr"
        type="text"
        value=""
      />
    </div>
    <div>
      <p>
         Amount:
      </p>
      <input
        onChange={[Function]}
        placeholder="Your Expense Amount"
        type="text"
        value="0.00"
      />
    </div>
    <div>
      <p>
         Create Date: 
      </p>
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"2024-01-16T07:25:20.441Z"}
        daySize={39}
        disabled={false}
        displayFormat="DD-MM-YYYY"
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div>
      <p>
         Comments
      </p>
      <textarea
        onChange={[Function]}
        placeholder="Add Comments for your expense here"
        type="text"
        value=""
      />
    </div>
    <div>
      <p>
         
      </p>
      <button>
         Add Expense 
      </button>
    </div>
  </div>
</form>
`;

exports[`ExpenseForm should be rendered correctly 1`] = `
<form
  onSubmit={[Function]}
>
  <div>
    <div>
      <p>
         Description: 
      </p>
      <input
        autoFocus={true}
        onChange={[Function]}
        placeholder="Your Expense Descr"
        type="text"
        value=""
      />
    </div>
    <div>
      <p>
         Amount:
      </p>
      <input
        onChange={[Function]}
        placeholder="Your Expense Amount"
        type="text"
        value="0.00"
      />
    </div>
    <div>
      <p>
         Create Date: 
      </p>
      <SingleDatePicker
        anchorDirection="left"
        customCloseIcon={null}
        customInputIcon={null}
        date={"2024-01-16T07:25:20.436Z"}
        daySize={39}
        disabled={false}
        displayFormat="DD-MM-YYYY"
        enableOutsideDays={false}
        firstDayOfWeek={null}
        focused={false}
        hideKeyboardShortcutsPanel={false}
        horizontalMargin={0}
        id="date"
        initialVisibleMonth={null}
        inputIconPosition="before"
        isDayBlocked={[Function]}
        isDayHighlighted={[Function]}
        isOutsideRange={[Function]}
        isRTL={false}
        keepOpenOnDateSelect={false}
        monthFormat="MMMM YYYY"
        navNext={null}
        navPrev={null}
        numberOfMonths={1}
        onClose={[Function]}
        onDateChange={[Function]}
        onFocusChange={[Function]}
        onNextMonthClick={[Function]}
        onPrevMonthClick={[Function]}
        openDirection="down"
        orientation="horizontal"
        phrases={
          Object {
            "calendarLabel": "Calendar",
            "chooseAvailableDate": [Function],
            "clearDate": "Clear Date",
            "closeDatePicker": "Close",
            "dateIsUnavailable": [Function],
            "enterKey": "Enter key",
            "escape": "Escape key",
            "hideKeyboardShortcutsPanel": "Close the shortcuts panel",
            "homeEnd": "Home and end keys",
            "jumpToNextMonth": "Move forward to switch to the next month",
            "jumpToPrevMonth": "Move backward to switch to the previous month",
            "keyboardNavigationInstructions": "Press the down arrow key to interact with the calendar and
            select a date. Press the question mark key to get the keyboard shortcuts for changing dates.",
            "keyboardShortcuts": "Keyboard Shortcuts",
            "leftArrowRightArrow": "Right and left arrow keys",
            "moveFocusByOneDay": "Move backward (left) and forward (right) by one day",
            "moveFocusByOneMonth": "Switch months",
            "moveFocusByOneWeek": "Move backward (up) and forward (down) by one week",
            "moveFocustoStartAndEndOfWeek": "Go to the first or last day of a week",
            "openThisPanel": "Open this panel",
            "pageUpPageDown": "page up and page down keys",
            "questionMark": "Question mark",
            "returnFocusToInput": "Return to the date input field",
            "selectFocusedDate": "Select the date in focus",
            "showKeyboardShortcutsPanel": "Open the keyboard shortcuts panel",
            "upArrowDownArrow": "up and down arrow keys",
          }
        }
        placeholder="Date"
        readOnly={false}
        renderCalendarInfo={null}
        renderDay={null}
        renderMonth={null}
        reopenPickerOnClearDate={false}
        required={false}
        screenReaderInputMessage=""
        showClearDate={false}
        showDefaultInputIcon={false}
        weekDayFormat="dd"
        withFullScreenPortal={false}
        withPortal={false}
      />
    </div>
    <div>
      <p>
         Comments
      </p>
      <textarea
        onChange={[Function]}
        placeholder="Add Comments for your expense here"
        type="text"
        value=""
      />
    </div>
    <div>
      <p>
         
      </p>
      <button>
         Add Expense 
      </button>
    </div>
  </div>
</form>
`;
